# seguro

./: README.org
src/: #styles.css#  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: encryption.rs  main.rs
src-tauri/src/vault/: encryption.rs  mod.rs  zipping.rs
