[package]
name = "paz"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "dialog-message", "path-all", "fs-exists", "shell-open", "dialog"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Zip stuff
zip = "0.6.6"
zip-extensions = "0.6.1"

# Errors
anyhow = "1.0"

# Encryption stuff
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
rand = "0.8"
zeroize = "1.4"
rust-argon2 = "2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
